transform working now (through http request).
refactor transform data struct.
replace google font api link to privacy focus api (fonts.coollabs.io)

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono&family=Noto+Sans+TC&family=Noto+Serif&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin />
+    <link href="https://api.fonts.coollabs.io/css2?family=Noto+Sans&family=Noto+Sans+Mono&family=Noto+Sans+TC&family=Noto+Serif&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
